# ldap-reader

./: .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
ldap-reader/: reader.py
ldap_reader/: __init__.py  reader.py  vendor.py
test/: test_reader.py
