[tool.poetry]
name = "ldap-reader"
version = "0.2.0"
description = "ldap-reader is a module for listing accounts and authenticating them against LDAP."
authors = ["Your Name <you@example.com>"]
homepage = "https://github.com/SpiderOak/ldap-reader"
repository = "https://github.com/SpiderOak/ldap-reader"
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
python-ldap = "^3.1"

[tool.poetry.dev-dependencies]
pytest = "^4.1"
tox = "^3.7"
bandit = "^1.5"
flake8 = "^3.6"
isort = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
